--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -205,11 +205,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "           City Country                 Date    Lat     Lng  Max Temp  \\\n0          Chuy      UY  2020-07-07 17:23:32 -33.70  -53.46     53.31   \n1        Mocuba      MZ  2020-07-07 17:23:32 -16.84   36.99     66.20   \n2     Maniitsoq      GL  2020-07-07 17:23:33  65.42  -52.90     39.16   \n3    Butaritari      KI  2020-07-07 17:23:33   3.07  172.79     82.71   \n4       Ushuaia      AR  2020-07-07 17:23:33 -54.80  -68.30     39.20   \n..          ...     ...                  ...    ...     ...       ...   \n561      Kailua      US  2020-07-07 17:19:56  21.40 -157.74     78.80   \n562  Vila Velha      BR  2020-07-07 17:24:54 -20.33  -40.29     82.40   \n563      Sokolo      ML  2020-07-07 17:24:54  14.73   -6.12    107.24   \n564      Narsaq      GL  2020-07-07 17:24:54  60.92  -46.05     50.00   \n565     Velesin      CZ  2020-07-07 17:24:54  48.83   14.46     68.00   \n\n     Humidity  Cloudiness  Wind Speed  \n0          63          70       12.57  \n1          81           9        5.61  \n2          95         100        4.45  \n3          76          24       11.30  \n4          55          75       17.22  \n..        ...         ...         ...  \n561        74          20       11.41  \n562        54          20        6.93  \n563        15          22        9.17  \n564        71          75        9.17  \n565        43          75        1.83  \n\n[566 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Chuy</td>\n      <td>UY</td>\n      <td>2020-07-07 17:23:32</td>\n      <td>-33.70</td>\n      <td>-53.46</td>\n      <td>53.31</td>\n      <td>63</td>\n      <td>70</td>\n      <td>12.57</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Mocuba</td>\n      <td>MZ</td>\n      <td>2020-07-07 17:23:32</td>\n      <td>-16.84</td>\n      <td>36.99</td>\n      <td>66.20</td>\n      <td>81</td>\n      <td>9</td>\n      <td>5.61</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Maniitsoq</td>\n      <td>GL</td>\n      <td>2020-07-07 17:23:33</td>\n      <td>65.42</td>\n      <td>-52.90</td>\n      <td>39.16</td>\n      <td>95</td>\n      <td>100</td>\n      <td>4.45</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Butaritari</td>\n      <td>KI</td>\n      <td>2020-07-07 17:23:33</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>82.71</td>\n      <td>76</td>\n      <td>24</td>\n      <td>11.30</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ushuaia</td>\n      <td>AR</td>\n      <td>2020-07-07 17:23:33</td>\n      <td>-54.80</td>\n      <td>-68.30</td>\n      <td>39.20</td>\n      <td>55</td>\n      <td>75</td>\n      <td>17.22</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>561</th>\n      <td>Kailua</td>\n      <td>US</td>\n      <td>2020-07-07 17:19:56</td>\n      <td>21.40</td>\n      <td>-157.74</td>\n      <td>78.80</td>\n      <td>74</td>\n      <td>20</td>\n      <td>11.41</td>\n    </tr>\n    <tr>\n      <th>562</th>\n      <td>Vila Velha</td>\n      <td>BR</td>\n      <td>2020-07-07 17:24:54</td>\n      <td>-20.33</td>\n      <td>-40.29</td>\n      <td>82.40</td>\n      <td>54</td>\n      <td>20</td>\n      <td>6.93</td>\n    </tr>\n    <tr>\n      <th>563</th>\n      <td>Sokolo</td>\n      <td>ML</td>\n      <td>2020-07-07 17:24:54</td>\n      <td>14.73</td>\n      <td>-6.12</td>\n      <td>107.24</td>\n      <td>15</td>\n      <td>22</td>\n      <td>9.17</td>\n    </tr>\n    <tr>\n      <th>564</th>\n      <td>Narsaq</td>\n      <td>GL</td>\n      <td>2020-07-07 17:24:54</td>\n      <td>60.92</td>\n      <td>-46.05</td>\n      <td>50.00</td>\n      <td>71</td>\n      <td>75</td>\n      <td>9.17</td>\n    </tr>\n    <tr>\n      <th>565</th>\n      <td>Velesin</td>\n      <td>CZ</td>\n      <td>2020-07-07 17:24:54</td>\n      <td>48.83</td>\n      <td>14.46</td>\n      <td>68.00</td>\n      <td>43</td>\n      <td>75</td>\n      <td>1.83</td>\n    </tr>\n  </tbody>\n</table>\n<p>566 rows × 9 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "new_column_order = [\"City\", \"Country\", \"Date\", \"Lat\", \"Lng\", \"Max Temp\", \"Humidity\", \"Cloudiness\",\"Wind Speed\"]\n",
+    "city_data_df = city_data_df[new_column_order]\n",
+    "city_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_column_order = [\"City\", \"Country\", \"Date\", \"Lat\", \"Lng\", \"Max Temp\", \"Humidity\", \"Cloudiness\",\"Wind Speed\"]"
+    "# Create the output file (CSV).\n",
+    "output_data_file = \"weather_data/cities.csv\"\n",
+    "# Export the City_Data into a CSV.\n",
+    "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
   }
  ],
