--- a/Vacation_Search.ipynb
+++ b/Vacation_Search.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "city_csv = 'WeatherPy_database.csv'\n",
+    "city_csv = './data/WeatherPy_database.csv'\n",
     "city_data_df = pd.read_csv(city_csv)\n",
     "city_data_df.head()\n",
     "city_data_df.dtypes\n"
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Create the output file (CSV).\n",
-    "output_data_file = 'WeatherPy_vacation.csv'\n",
+    "output_data_file = './data/WeatherPy_vacation.csv'\n",
     "# Export the City_Data into a CSV.\n",
     "hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
