--- a/Weather_Database.ipynb
+++ b/Weather_Database.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Create the output file (CSV).\n",
-    "output_data_file = 'WeatherPy_database.csv'\n",
+    "output_data_file = './data/WeatherPy_database.csv'\n",
     "# Export the City_Data into a CSV.\n",
     "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
